# sieve

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SIEVE-SPEC.md  package-lock.json  package.json  pyproject.toml  tsconfig.api.json  tsconfig.web.json  vercel.json
.codex/: config.toml
.codex/agents/: sieve-executor.toml  sieve-ideator.toml
.github/workflows/: ci.yml  pages.yml
api/: cleanup.ts  jobs.ts  live-worker.ts  openai-proxy.ts  session.ts
api/_lib/: jobs.ts  openai_proxy.test.ts  openai_proxy.ts  session.test.ts  session.ts  submission.test.ts  submission.ts
api/jobs/: [id].ts
docs/: README.md  audit-examples.md  devpost-about.md
docs/adr/: 0001-interactive-vercel-demo.md  0002-vercel-hobby-replay-only.md
docs/build-week/: evidence.md  methodology.md  offline-demo-runbook.md
docs/demo-video/: README.md  captions.srt  narration.md
docs/development/: README.md  (+2 more)
shared/: live_suite.ts
tests/: test_agent.py  test_budget.py  test_cli.py  test_diffing.py  test_fixture_tools.py  test_hobby_replay_demo.py  test_interventions.py  test_no_op_fidelity.py  test_offline_demo_runbook.py  test_outcomes.py  test_pages_workflow.py  test_persistence.py  test_public_docs.py  test_replay.py  test_replay_bundle.py  test_reporting.py  test_resume.py  test_runner.py  test_schemas.py  test_score_regression.py  test_scoring.py  test_suite.py  test_task_suite_phase4.py
tools/: build_demo_replay.py  build_replay_bundle.py  record_demo_video.mjs  render_report_screenshot.mjs  verify_hobby_replay.mjs
web/: index.html  vite.config.ts  vitest.config.ts
(+153 files in other folders)
