[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sieve-auditor"
version = "0.1.0"
description = "Causal faithfulness auditor for coding agents"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "tree-sitter>=0.23,<0.24",
  "tree-sitter-typescript>=0.23,<0.24",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
sieve = "sieve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=sieve --cov-branch --cov-fail-under=80 --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
